--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
       </header>
       <main class="main">
         <div class="Forms">
-          <form>
+          <form id="Form1">
             <div class="wrapper_form_Sign_up">
               <h1 class="Registration">Регистрация</h1>
-              <label for="Login_h3"><h3>Логин</h3></label>
-              <input type="text" name="Login" placeholder="Login" />
+              <label for="Login"><h3>Логин</h3></label>
+              <input type="text" name="Login" placeholder="Login" id="login" />
               <label for="Password"><h3>Пароль</h3></label>
               <input
                 type="password"
@@ -40,7 +40,7 @@
             </div>
           </form>
 
-          <form>
+          <form id="Form2">
             <div class="wrapper_form_Sign_in">
               <h1 class="Registration">Войти</h1>
               <label for="Login_h3"><h3>Логин или Электронная почта</h3></label>
