--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       </header>
       <main class="main">
         <div class="Forms">
-          <form>
+          <form name="Form1">
             <div class="wrapper_form_Sign_up">
               <h1 class="Registration">Регистрация</h1>
               <label for="Login_h3"><h3>Логин</h3></label>
@@ -40,10 +40,10 @@
             </div>
           </form>
 
-          <form>
+          <form name="Form2">
             <div class="wrapper_form_Sign_in">
               <h1 class="Registration">Войти</h1>
-              <label for="Login_h3"><h3>Логин или Электронная почта</h3></label>
+              <label for="Login"><h3>Логин или Электронная почта</h3></label>
               <input
                 type="text"
                 name="Login"
