--- a/public/index.html
+++ b/public/index.html
@@ -15,40 +15,36 @@
       </header>
       <main class="main">
         <div class="Forms">
-<<<<<<< HEAD
-          <form name="Form1">
-=======
           <form id="Form1">
->>>>>>> 475e0e3eeca0a515c353072855d87016fb719c06
             <div class="wrapper_form_Sign_up">
               <h1 class="Registration">Регистрация</h1>
               <label for="Login"><h3>Логин</h3></label>
               <input type="text" name="Login" placeholder="Login" id="login" />
+              <div id="error_Login"></div>
               <label for="Password"><h3>Пароль</h3></label>
               <input
                 type="password"
                 name="Password"
                 placeholder="Enter password"
               />
+              <div id="error_Password"></div>
               <label for="Repeat_password"><h3>Повторите пароль</h3></label>
               <input
-                type="text"
+                type="password"
                 name="Repeat_password"
                 placeholder="Repeat password"
               />
+              <div id="error_Repeat_password"></div>
               <label for="Email"><h3>Электронная почта</h3></label>
               <input type="email" name="Email" placeholder="Email" />
+              <div id="error_Email"></div>
               <button class="button_submit" type="submit">
                 Зарегистрироваться
               </button>
             </div>
           </form>
 
-<<<<<<< HEAD
-          <form name="Form2">
-=======
           <form id="Form2">
->>>>>>> 475e0e3eeca0a515c353072855d87016fb719c06
             <div class="wrapper_form_Sign_in">
               <h1 class="Registration">Войти</h1>
               <label for="Login"><h3>Логин или Электронная почта</h3></label>
