--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,6 @@
         </div>
       </main>
     </div>
-    <script src="/src/clietsApp.js"></script>
+    <script src="/src/clientsApp.js"></script>
   </body>
 </html>
