--- a/public/index_forms.html
+++ b/public/index_forms.html
@@ -9,6 +9,6 @@
   <body>
     <span> Поздровляю вы зарегестрировались </span>
     <button class="back">back</button>
-    <script src="/src/clientsAppBack.js"></script>
+    <script src="./src/clientsAppBack.js"></script>
   </body>
 </html>
