--- a/public/index_forms.html
+++ b/public/index_forms.html
@@ -7,7 +7,9 @@
     <title>FormsAuth</title>
   </head>
   <body>
-    <span> Поздровляю вы зарегестрировались </span>
+    <span>
+      Поздровляю вы зарегестрировались <span class="nameUser"></span>
+    </span>
     <button class="back">back</button>
     <script src="/src/clientsAppBack.js"></script>
   </body>
